<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainest_container"

    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/timetable_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">
        <android.support.v7.widget.Toolbar
            android:id="@+id/timetable_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


        <com.github.sundeepk.compactcalendarview.CompactCalendarView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/compactcalendar_view"
            android:layout_width="fill_parent"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_height="250dp"
            app:compactCalendarTargetHeight="250dp"
            app:compactCalendarTextSize="12sp"
            app:compactCalendarBackgroundColor="@color/colorCalendar"
            app:compactCalendarTextColor="#fff"
            app:compactCalendarCurrentSelectedDayBackgroundColor="#E57373"
            app:compactCalendarCurrentDayBackgroundColor="#B71C1C"
            app:compactCalendarMultiEventIndicatorColor="#fff" />
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:id="@+id/tab_week"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tab_week_mon"
            style="@style/WeekTab"
            android:text="@string/week_mon" />


        <TextView
            android:id="@+id/tab_week_tue"
            style="@style/WeekTab"
            android:text="@string/week_tue" />

        <TextView
            android:id="@+id/tab_week_wed"
            style="@style/WeekTab"
            android:text="@string/week_wed" />

        <TextView
            android:id="@+id/tab_week_thu"
            style="@style/WeekTab"
            android:text="@string/week_thu" />

        <TextView
            android:id="@+id/tab_week_fri"
            style="@style/WeekTab"
            android:text="@string/week_fri" />

        <TextView
            android:id="@+id/tab_week_sat"
            style="@style/WeekTab"
            android:text="@string/week_sat" />

        <TextView
            android:id="@+id/tab_week_sun"
            style="@style/WeekTab"
            android:text="@string/week_sun" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tab_indicator"
        android:layout_width="wrap_content"
        android:layout_height="3dp"

        android:gravity="center"
        android:orientation="vertical"
        >


    </LinearLayout>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/white" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:backgroundTint="@color/colorTAB"
        app:srcCompat="@drawable/add_fab"
        />

</android.support.design.widget.CoordinatorLayout>




</LinearLayout>